--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@fortawesome/free-regular-svg-icons": "^5.13.0",
     "json-server": "^0.15.1",
     "node-sass": "^4.13.1",
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.13.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1"
